--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -33,4 +33,4 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rfid-mqtt:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/rfid-mqtt:latest
